Added threads, split server into classes.

--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -22,7 +22,7 @@ java {
 jar {
     manifest {
         attributes(
-            'Main-Class': 'org.hg.soccerstar.App'
+            'Main-Class': 'org.hg.soccerstar.Server'
         )
     }
 }
